# crewAI

./: .pre-commit-config.yaml  404.html  index.html  mkdocs.yml  pyproject.toml  research_progress.json  research_report.txt  sitemap.xml
crews/ai_influencer/: agents.py  main.py  pyproject.toml  tasks.py
crews/ai_influencer/logs/: conversation_0f02be96-dab3-4f99-a977-f7eac62e6c04.json  conversation_0f02be96-dab3-4f99-a977-f7eac62e6c04.txt  conversation_182c9dd0-879f-4460-a816-1fc6f34afae1.json  conversation_182c9dd0-879f-4460-a816-1fc6f34afae1.txt  conversation_205b146a-122f-49b0-9796-c921bad1c38d.json  conversation_205b146a-122f-49b0-9796-c921bad1c38d.txt  conversation_34ebd28a-423b-4c32-8b6d-28deac1eb0ee.json  conversation_34ebd28a-423b-4c32-8b6d-28deac1eb0ee.txt  conversation_3f90454c-da00-4585-af4b-ab936a86a0d7.json  conversation_3f90454c-da00-4585-af4b-ab936a86a0d7.txt  conversation_57128850-d443-4255-a40d-a7bba9655d5a.json  conversation_57128850-d443-4255-a40d-a7bba9655d5a.txt  conversation_6b41224f-9b3e-41ea-bd0c-dca6c5dc1f22.json  conversation_6ccb7ab6-aebe-4d72-93df-1569652bd22a.json  conversation_6ccb7ab6-aebe-4d72-93df-1569652bd22a.txt  conversation_7194a52b-529b-4fc0-ada8-eded63bbe332.json  conversation_7194a52b-529b-4fc0-ada8-eded63bbe332.txt  conversation_7bd13eed-f5a8-4f1e-8ed5-84b7a7440f57.json  conversation_7bd13eed-f5a8-4f1e-8ed5-84b7a7440f57.txt  conversation_7dd4b16a-4a64-47c4-acf1-19a6220ac99a.json  conversation_7dd4b16a-4a64-47c4-acf1-19a6220ac99a.txt  conversation_abc74720-a4bf-4a30-ab98-8b62e722f95d.json  linkedin_posts_20240411214928.txt  (+36 more)
(+262 files in other folders)
